// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BpkInput should render correctly 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "clearButtonLabel" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "clearButtonMode=always" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-input__container"
  >
    <input
      aria-invalid="false"
      class="bpk-input bpk-input--clearable bpk-input--persistent-clearable"
      data-backpack-ds-component="Input"
      id="test"
      name="test"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "clearButtonMode=whileEditing" attribute 1`] = `
<DocumentFragment>
  <div
    class="bpk-input__container"
  >
    <input
      aria-invalid="false"
      class="bpk-input bpk-input--clearable"
      data-backpack-ds-component="Input"
      id="test"
      name="test"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "clearable", "onClear" and "clearButtonLabel" attributes 1`] = `
<DocumentFragment>
  <div
    class="bpk-input__container"
  >
    <input
      aria-invalid="false"
      class="bpk-input bpk-input--clearable"
      data-backpack-ds-component="Input"
      id="test"
      name="test"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "docked" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--docked"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "dockedFirst" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--docked-first"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "dockedLast" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--docked-last"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "dockedMiddle" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--docked-middle"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "large" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--large"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with "onClear" attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with additional props 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    placeholder="Enter a country, city or airport"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with type attribute 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="password"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with valid attribute set to "false" 1`] = `
<DocumentFragment>
  <input
    aria-invalid="true"
    class="bpk-input bpk-input--invalid"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with valid attribute set to "true" 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input bpk-input--valid"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value=""
  />
</DocumentFragment>
`;

exports[`BpkInput should render correctly with value 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-backpack-ds-component="Input"
    id="test"
    name="test"
    type="text"
    value="My value"
  />
</DocumentFragment>
`;